<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Channels</string>
    <string name="add_channel">Add</string>
    <string name="remove_channel">Remove</string>
    <string name="clear_channels">Remove All</string>
    <string name="select_channels">Channels</string>
    <string name="start_state">Start</string>
    <string name="stop_state">Stop</string>
    <string name="reset">Reset</string>
    <string name="export">Export</string>
    <string name="table_selection">Select the channel to view</string>
    <string name="no_channels_selected">No Selected Channels</string>
    <string name="menu_settings">Settings</string>
    <string name="empty_cell">no value</string>
    <string name="status_description">Indicates when status is running (Green)</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_line_display">LineDisplay</string>

</resources>